# scheme2list

./: README
netToScheme/: CMakeLists.txt  inst.json  main.cpp  net.json
